<resources>
    <string name="app_name">떠나자</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--     signup xml  -->
    <string name="id">id</string>
    <string name="password">password</string>
    <string name="edtRegisterName">Name</string>
    <string name="before_string">이전</string>
    <string name="next_string">다음</string>
    <string name="check_string">확인</string>
    <string name="search_string">검색</string>
    <string name="submit_string"> 추가됨</string>
    <!-- activity_board_details   -->
    <string name="user_string"> 유저</string>
    <string name="tvTitle_string"> 제목</string>
    <string name="tvContent_string"> 내용</string>
    <string name="edtComment_string"> 댓글 입력</string>
    <string name="btnInput_string"> 입력</string>
    <string name="boardTile_string"> 글쓰기</string>
    <!--    chat -->
    <string name="edtMessage_string"> 메시지를 입력하세요</string>
    <!--     main login string -->
    <string name="login_string">로그인</string>
    <string name="emailLogin_string">이메일로 로그인</string>
    <string name="Membership_string">회원가입</string>
    <string name="textView_string">지금 떠나자 와 함께 \n여행을 시작하세요!</string>
    <string name="textView2_string">여러분들의 신나는 여행 저희가 책임지겠습니다!</string>
    <!--     SignUp 1 string -->
    <string name="emailMembership_string">이메일로 회원가입</string>
    <string name="emailAddress_string">이메일 주소</string>
    <string name="password_string">비밀번호</string>
    <string name="checkPassword_string">비밀번호</string>
    <string name="tvAnot_string">영문 대소문자, 숫자 특수문자 포함 8자리 이상 입력해주세요.</string>
    <string name="tvAnot2_string">한글/영어/숫자/밑줄을 사용할 수 있습니다.</string>
    <string name="tvAnot3_string">비밀번호가 서로 일치하지 않습니다.</string>
    <!--     SignUp 2 string -->
    <string name="inputNickName_string">닉네임을 입력해주세요.</string>
    <string name="start_string">시작하기</string>
    <string name="logOut_string">로그아웃</string>
    <!--list_layout string -->
    <string name="mapName_string">이름</string>
    <string name="roadName_string">도로명</string>
    <string name="branchNumber_string">지번</string>
    <!--- receive string-->
    <string name="chatNickName_string">닉네임</string>
    <string name="receiveMessage_string">받은 메세지</string>
    <string name="sendMessage_string">보낸 메세지</string>
    <string name="receiveMessageDate_string">2023.05.02 16:59:45</string>
    <!--BoardDetailsActivity  string-->
    <string name="BDA_string1">게시물 삭제</string>
    <string name="BDA_string2">삭제 하시겠습니까?</string>
    <string name="BDA_string3">게시글 삭제 완료</string>
    <string name="BDA_string4">텍스트를 입력해주세요</string>
    <string name="BDA_string5">댓글이 입력되었습니다.</string>
    <!--PictureAddActivity  string-->
    <string name="PAA_string1">이미지 정보 업로드 성공</string>
    <string name="PAA_string2">게시글이 등록되었습니다.</string>
    <string name="PAA_string3">게시글 등록 실패하였습니다.</string>
    <!--ChatActivityActivity  string-->
    <string name="CAA_string1">메시지를 입력해주세요.</string>
    <!--LoginActivity  string-->
    <string name="LA_string1">아이디 또는 패스워드를 입력해주세요.</string>
    <string name="LA_string2">성공</string>
    <string name="LA_string3">패스워드를 확인해주세요.</string>
    <string name="LA_string4">가입된 정보가 없습니다.</string>
    <string name="LA_string5">아이디 또는 패스워드를 입력해주세요.</string>

    <!--MainActivity  string-->
    <string name="MA_string1">뒤로 버튼을 한번 더 누르시면 종료 됩니다.</string>
    <!--SignUpActivity  string-->
    <string name="SUA_string1">사용 가능한 이메일 입니다.</string>
    <string name="SUA_string2">이메일 형식이 올바르지 않습니다. \nex) XXXXX@gmail.com</string>
    <string name="regex_pattern">^(?=.*[A-Za-z])(?=.*[0-9])(?=.*[$@$!%*#?&amp;.])([A-Za-z0-9$@$!%*#?&amp;.]){8,15}$</string>
    <string name="SUA_string4">중복된 이메일입니다.</string>
    <string name="SUA_string5">이메일 입력중</string>
    <!--SignUpActivity2  string-->
    <string name="SUA2_regex_pattern">^[가-힣ㄱ-ㅎa-zA-Z0-9._-]{2,}$</string>
    <string name="SUA2_string1">한글/영어/숫자/밑줄을 사용할 수 있습니다.</string>
    <string name="SUA2_string2">프로필 사진을 선택해주세요.</string>
    <string name="SUA2_string3">회원가입이 완료되었습니다</string>
    <string name="SUA2_string4">화면 이동 중 문제 발생</string>
    <string name="SUA2_string5">회원가입에 실패하였습니다.</string>
    <string name="SUA2_string6">한글/영어/숫자/밑줄을 사용할 수 있습니다.</string>
    <string name="SUA2_string7">중복된 닉네임입니다.</string>
    <string name="SUA2_string8">한글/영어/숫자/밑줄을 사용할 수 있습니다.</string>

</resources>