<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChatActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@id/input_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/primaryColor"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvChatName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/user_string"
            android:textSize="20sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/chatRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="95"
        android:layout_below="@+id/input_layout" />

    <LinearLayout
        android:id="@+id/input_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="5dp"
        >

        <EditText
            android:id="@+id/edtMessage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="85"
            android:background="@drawable/bg_edit_background"
            android:hint="@string/edtMessage_string"
            android:inputType="textMultiLine"
            android:paddingStart="10dp" />

        <Button
            android:id="@+id/btnSend"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:backgroundTint="@color/primaryColor"
            android:background="@drawable/bg_btn_background"
            android:text="@string/btnInput_string" />
    </LinearLayout>

</LinearLayout>