<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_title_round_frame"
        android:backgroundTint="#FFFFFF">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".activity.BoardDetailsActivity">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginTop="5dp"
                    android:padding="5dp">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/ivUserProfilePicture"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_marginLeft="15dp"
                        android:src="@drawable/ic_launcher_background" />

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/ivUserProfilePicture"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="8dp"
                        android:layout_toRightOf="@+id/ivUserProfilePicture"
                        android:text="@string/user_string"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/ivDelete"
                        android:layout_width="20dp"
                        android:layout_height="40dp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="13dp"
                        android:src="@drawable/delete"
                        android:visibility="invisible" />
                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    android:background="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/bg_title_round_frame"
                        android:backgroundTint="@color/white"
                        android:padding="10dp"
                        android:text="@string/tvTitle_string"
                        android:textColor="@color/black" />

                    <ImageView
                        android:id="@+id/ivImage"
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/bg_title_round_frame"
                        android:backgroundTint="@color/white" />

                    <TextView
                        android:id="@+id/tvContent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:backgroundTint="@color/white"
                        android:padding="10dp"
                        android:text="@string/tvContent_string"
                        android:textColor="@color/black" />
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/lvcomment"
                        android:layout_width="match_parent"
                        android:layout_height="600dp" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white">

        <EditText
            android:id="@+id/edtComment"
            android:layout_width="320dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:background="@android:color/transparent"
            android:hint="@string/edtComment_string" />

        <Button
            android:id="@+id/btnInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/primaryColor"
            android:background="@drawable/bg_btn_background"
            android:text="@string/btnInput_string" />

    </LinearLayout>

</RelativeLayout>