<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">
<!--    tools:context=".MapFragment"-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_search_field"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:background="@drawable/ic_vector_edittext_rounded_corner_rectangle"
            android:ems="13"
            android:hint="  예) 서울역"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_search"
            app:layout_constraintEnd_toStartOf="@+id/btn_search"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/btn_search" />

        <Button
            android:id="@+id/btn_search"
            style="@style/Widget.AppCompat.Button.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/bg_app_btn_main"
            android:text="@string/search_string"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_target"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@android:color/transparent"
            app:layout_constraintEnd_toEndOf="parent"
            android:focusableInTouchMode="true"
            android:scaleType="fitCenter"
            app:layout_constraintTop_toBottomOf="@+id/btn_addMaker"
            app:srcCompat="@drawable/gps" />

        <ImageButton
            android:id="@+id/btn_addMaker"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_search"
            app:srcCompat="@drawable/map_b" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_bottom_sheet_background"
        android:descendantFocusability="beforeDescendants"
        app:behavior_hideable="false"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/bottomSheetGrapple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_bottom_sheet_grapple"
            app:layout_constraintBottom_toTopOf="@+id/rv_list"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_list"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_list">

            <Button
                android:id="@+id/btn_prevPage"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_background"
                android:enabled="false"
                android:padding="10dp"
                android:text="@string/before_string"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_pageNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:layout_weight="2"
                android:gravity="center"
                android:padding="10dp"
                android:text="1"
                android:textColor="?android:attr/textColorPrimary" />

            <Button
                android:id="@+id/btn_nextPage"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_btn_background"
                android:enabled="false"
                android:padding="10dp"
                android:text="@string/next_string"
                android:backgroundTint="@color/primaryColor"
                android:textSize="15sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>